content/en/releases/v07.08/upgrade-notes.md
---
title: "Upgrade Notes"
linkTitle: "Upgrade Notes"
weight: 40
date: 2025-01-30
tags: 
description: >
  Required actions and information relating to upgrading to Stroom version 7.8.
---

{{% warning %}}
Please read this section carefully in case any of it is relevant to your Stroom instance.
{{% /warning %}}

## Java Version

Stroom v7.8 requires Java 21.
This is the same java version as Stroom v7.7.
Ensure the Stroom and Stroom-Proxy hosts are running the latest patch release of Java v21.


## Configuration File Changes

<!--
Check changes using something like this:
old_ver=7.6
new_ver=7.7
git diff origin/${old_ver}..origin/${new_ver} stroom-config/stroom-config-app/src/test/resources/stroom/config/app/expected.yaml
git diff origin/${old_ver}..origin/${new_ver} stroom-proxy/stroom-proxy-app/src/test/resources/stroom/dist/proxy-expected.yaml
-->

### Stroom's `config.yml`

#### Service Discovery

If your `config.yml` file contains the `serviceDiscovery` branch, you need to remove it as the associated service discovery code has been removed from Stroom.
If you do not remove it, Stroom will not boot.

```yml
appConfig:
  serviceDiscovery:  # Remove this branch
```


#### Plan B State Store

The following block of config has been added for the experimental Plan B State Store.

```yml
appConfig:
  planb:
    minTimeToKeepEnvOpen: "PT1M"
    minTimeToKeepSnapshots: "PT10M"
    nodeList: []
    path: "${stroom.home}/planb"
    snapshotRetryFetchInterval: "PT1M"
    stateDocCache:
      expireAfterAccess: null
      expireAfterWrite: "PT10M"
      maximumSize: 100
      refreshAfterWrite: null
```

#### Reporting

The following block of config has been added for the new reporting feature.

```yml
appConfig:
  ui:
    reportUiDefaultConfig:
      defaultBodyTemplate: "<!DOCTYPE html>\n<html lang=\"en\">\n<meta charset=\"\
        UTF-8\" />\n<title>Report '{{ reportName | escape }}'</title>\n<body>\n <p><em>Report:\
        \ {{ reportName | escape }}</em>  executed for {{ effectiveExecutionTime |\
        \ escape }} on {{ executionTime | escape }}</p>\n <p><em>Description:</em>\
        \  {{ description | escape }}</p>\n</body>\n"
      defaultSubjectTemplate: "Report '{{ reportName | escape }}'"
```


#### OpenID HTTP Client

Added the property `httpClient` for configuring the HTTP client used to fetch the {{< glossary "identity-provider-idp" "IDP's">}} configuration.

```yml
  security:
    authentication:
      openId:
        httpClient: null
```


### Stroom-Proxy's `config.yml`

The configuration for proxy has changed significantly since the last stable release of Stroom-Proxy (7.0.x) so it is advised to look at the default Stroom-Proxy configuration that comes with the distribution.


## Database Migrations

When Stroom boots for the first time with a new version it will run any required database migrations to bring the database schema up to the correct version.

{{% warning %}}
It is highly recommended to ensure you have a database backup in place before booting stroom with a new version.
This is to mitigate against any problems with the migration.
It is also recommended to test the migration against a copy of your database to ensure that there are no problems when you do it for real.
{{% /warning %}}

On boot, Stroom will ensure that the migrations are only run by a single node in the cluster.
This will be the node that reaches that point in the boot process first.
All other nodes will wait until that is complete before proceeding with the boot process.

It is recommended however to use a single node to execute the migration.
To avoid Stroom starting up and beginning processing you can use the `migrage` command to just migrate the database and not fully boot Stroom.
See [`migrage` command]({{< relref "/docs/user-guide/tools/command-line#migrate" >}}) for more details.


<!-- 
Run stroom.db.migration.TestListDbMigrations.listDbMigrationsForLatestVersion() to generate the content for
this section
-->

### Migration Scripts

There are no database migrations in v7.8.
